2007-12-08  Ales Hakl  <ales at hakl dot net>

	* src/number.c (n_hash): better hashing

2007-12-06  Ales Hakl  <ales at hakl dot net>

	* src/hash.c: use new hash method

	* dfsch/dfsch.h: hash method in type descriptor

2007-12-05  Ales Hakl  <ales at hakl dot net>

	* dfsch/strings.h (DFSCH_STRING_ARG_OPT): fix optional string 
	arguments

	* src/hash.c (hash_string): fix infinite loop

2007-12-03  Ales Hakl  <ales at hakl dot net>

	* src/control.c (native_form_let): Fixed let argument parsing

2007-12-02  Ales Hakl  <ales at hakl dot net>

	* configure.ac (USE_READLINE): correct SCM lib dir (in /usr/share)

	* src/dfsch.c (dfsch__get_thread_info): create thread specific data 
	key before using it :)

2007-12-01  Ales Hakl  <ales at hakl dot net>

	* Makefile.am (nobase_include_HEADERS): integrate module loader
	into dfsch, install modules into $libdir/dfsch
	(nobase_include_HEADERS): install load.h

	* lib/load.c (dfsch_load_register): predefine library directories

2007-11-28  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c: Removed keywords (it's useless syntactic sugar which 
	is too non-trivial to get right)

2007-11-25  Ales Hakl  <ales at hakl dot net>

	* lib/load.c (dfsch_require): rename *modules* to load:*modules*

	* src/dfsch.c (dfsch_symbol_or_keyword): convert symbols or keyword to 
	string (without the leading :)

2007-11-15  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (make_symbol): keyword support
	(dfsch_symbol_2_keyword): fixed potential race condition

	* src/parse.c: Throw exceptions from parser

2007-11-03  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (dfsch_zip): construct list directly

2007-09-26  Ales Hakl  <ales at hakl dot net>

	* src/dfsch.c (pair_write): removed special case for simple pairs

2007-09-23  Ales Hakl  <ales at hakl dot net>

	* src/control.c (native_apply): fix apply

2007-09-20  Ales Hakl  <ales at hakl dot net>

	* lib/unix.c: use WCONTINUED only when it is defined
