@@ -800,5 +800,6 @@ void dfsch__native_register(dfsch_object_t *ctx){
   dfsch__object_native_register(ctx);
   dfsch__weak_native_register(ctx);
   dfsch__format_native_register(ctx);
+  dfsch__port_native_register(ctx);
 
 }
