@@ -2,6 +2,8 @@
 
 #include <dfsch/object.h>
 #include <dfsch/magic.h>
+#include "internal.h"
+#include "util.h"
 
 /*
  * Idea is that final implementation will fallback to calling these methods
@@ -26,12 +28,25 @@ const dfsch_type_t dfsch_port_type_type = {
   NULL
 };
 
+int dfsch_port_p(dfsch_object_t* port){
+  return port && port->type && port->type->type == DFSCH_PORT_TYPE_TYPE;
+}
+int dfsch_output_port_p(dfsch_object_t* port){
+  return port && port->type && port->type->type == DFSCH_PORT_TYPE_TYPE &&
+    ((dfsch_port_type_t*)(port->type))->write_buf;
+}
+int dfsch_input_port_p(dfsch_object_t* port){
+  return port && port->type && port->type->type == DFSCH_PORT_TYPE_TYPE &&
+    ((dfsch_port_type_t*)(port->type))->read_buf;
+}
+
+
 ssize_t dfsch_port_write_buf(dfsch_object_t* port, char*buf, size_t size){
   if (port && port->type && port->type->type == DFSCH_PORT_TYPE_TYPE){
     if (((dfsch_port_type_t*)(port->type))->write_buf){
       return ((dfsch_port_type_t*)(port->type))->write_buf(port, buf, size);
     } else {
-      dfsch_throw("exception:port-not-writable", port);
+      dfsch_throw("exception:not-an-output-port", port);
     }
   } else {
     dfsch_throw("exception:not-a-port", port);
@@ -42,7 +57,7 @@ ssize_t dfsch_port_read_buf(dfsch_object_t* port, char*buf, size_t size){
     if (((dfsch_port_type_t*)(port->type))->read_buf){
       return ((dfsch_port_type_t*)(port->type))->read_buf(port, buf, size);
     } else {
-      dfsch_throw("exception:port-not-readable", port);
+      dfsch_throw("exception:not-an-input-port", port);
     }
   } else {
     dfsch_throw("exception:not-a-port", port);
@@ -145,4 +160,82 @@ dfsch_strbuf_t* dfsch_port_readline(dfsch_object_t* port){
   } DFSCH_END_UNWIND;
 
   return dfsch_strbuf_create(buf, len);
+}
+
+
+typedef struct current_ports_t{
+  dfsch_object_t* output_port;
+  dfsch_object_t* input_port;
+} current_ports_t;
+
+current_ports_t* current_ports(){
+  static current_ports_t p = {NULL, NULL};
+  return &p;
+}
+
+dfsch_object_t* dfsch_current_output_port(){
+  return current_ports()->output_port;
+}
+dfsch_object_t* dfsch_current_input_port(){
+  return current_ports()->input_port;
+}
+
+void dfsch_set_current_output_port(dfsch_object_t* port){
+  if (!dfsch_output_port_p(port)){
+    dfsch_throw("exception:not-an-output-port", port);
+  }
+  current_ports()->output_port = port;
+}
+void dfsch_set_current_input_port(dfsch_object_t* port){
+  if (!dfsch_input_port_p(port)){
+    dfsch_throw("exception:not-an-input-port", port);
+  }
+  current_ports()->input_port = port;  
+}
+
+static dfsch_object_t* native_current_output_port(void* baton,
+                                                  dfsch_object_t* args,
+                                                  dfsch_tail_escape_t* esc){
+  DFSCH_ARG_END(args);
+  return dfsch_current_output_port();
+}
+static dfsch_object_t* native_current_input_port(void* baton,
+                                                 dfsch_object_t* args,
+                                                 dfsch_tail_escape_t* esc){
+  DFSCH_ARG_END(args);
+  return dfsch_current_input_port();
+}
+static dfsch_object_t* native_set_current_output_port(void* baton,
+                                                      dfsch_object_t* args,
+                                                      dfsch_tail_escape_t* esc){
+  dfsch_object_t* port;
+  DFSCH_OBJECT_ARG(args, port);  
+  DFSCH_ARG_END(args);
+  dfsch_set_current_output_port(port);
+  return NULL;
+}
+static dfsch_object_t* native_set_current_input_port(void* baton,
+                                                     dfsch_object_t* args,
+                                                     dfsch_tail_escape_t* esc){
+  dfsch_object_t* port;
+  DFSCH_OBJECT_ARG(args, port);  
+  DFSCH_ARG_END(args);
+  dfsch_set_current_input_port(port);
+  return NULL;
+}
+
+
+
+void dfsch__port_native_register(dfsch_object_t *ctx){
+  dfsch_define_cstr(ctx, "current-output-port", 
+                    dfsch_make_primitive(native_current_output_port, NULL));
+  dfsch_define_cstr(ctx, "current-input-port", 
+                    dfsch_make_primitive(native_current_input_port, NULL));
+}
+void dfsch_port_unsafe_register(dfsch_object_t* ctx){
+  dfsch_define_cstr(ctx, "set-current-output-port!", 
+                    dfsch_make_primitive(native_set_current_output_port, NULL));
+  dfsch_define_cstr(ctx, "set-current-input-port!", 
+                    dfsch_make_primitive(native_set_current_input_port, NULL));
+  
 }
