@@ -1,3 +1,7 @@
+2007-12-09  Ales Hakl  <ales at hakl dot net>
+
+	* src/ports.c: current-input/output-port
+
 2007-12-08  Ales Hakl  <ales at hakl dot net>
 
 	* src/number.c (n_hash): better hashing
